<resources>
    <string name="app_name">Call2Owner</string>
    <string name="provider_name" translatable="false">.wltpe.Provider</string>
    <string name="fb_provider_name" translatable="false">com.facebook.app.FacebookContentProvider1208538897165737</string>

    <string name="facebook_app_id">1208538897165737</string>
    <string name="facebook_client_token">b9848b4ba5fdf4254e939de79e15b7ec</string>

    <string name="title_home">Home</string>
    <string name="title_contact">Contact</string>
    <string name="title_cart">Cart</string>
    <string name="title_profile">Profile</string>
    <string name="profile">Profile</string>
    <string name="ok">OK</string>
    <string name="something_wrong">Something Went Wrong</string>

    <string name="no_internet_msg">Slow or no internet connection\ncheck your internet settings</string>
    <string name="ooops">Ooops!</string>
    <string name="try_again">Try Again</string>
    <string name="settings">Settings</string>
    <string name="buy_ticket_heading">Vehicle Parking Tag Pack Of 2</string>
    <string name="buy_msg">Call2owner Vehicle QR code pack of 2. It is a two-dimensional qrcode that can be scanned using a smartphone or QR code reader to quickly access the vehicle owner information. You can create a QR code for your vehicle, you can include your contact number and emergency contact number.</string>


    <string name="crop_image">Crop Image</string>
    <string name="crop_image_menu_flip_horizontally">flip</string>
    <string name="select_image">Select Image</string>
    <string name="setting">Settings</string>
    <string name="choose_where_to_find_the_image">Choose where to find the image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="save">Save</string>
    <string name="icon">Icon</string>
    <string name="field_mandatory">Field Requeired</string>
    <string name="cancel">Cancel</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_msg">You need to have Active Call2Owner tag, to be able to login.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="send_otp">Send Otp</string>
    <string name="otp_top_text">OTP has sent to 701161***</string>
    <string name="resend_msg">Didn\'t Received OTP? Resend in : %1$d</string>
    <string name="resend">Resent OTP</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="otp_has_been_sent_to">OTP has been sent to %1$s</string>
    <string name="view_details">View Details</string>
    <string name="shop_now">Shop Now</string>
    <string name="my_cart">My Cart</string>
    <string name="sorry">Sorry</string>
    <string name="no_items_in_cart">No Items in Cart</string>
    <string name="contact_us">Contact Us</string>
    <string name="chooser">Choose App</string>
    <string name="company_name">Yoke Payment India Pvt. Ltd.</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="remove">Remove</string>
    <string name="total_">Total: %1$s</string>
    <string name="price_">Price: ₹ %1$s</string>
    <string name="subtotal_">Subtotal: ₹ %1$s</string>
    <string name="subtotal_0_00">Subtotal : ₹0.00</string>
    <string name="proceed_to_buy_items_">Proceed to Buy (%1$s items)</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="action">Button</string>
    <string name="place_order">Place Order</string>
    <string name="about_us">About Us</string>
    <string name="faq_s">FAQ\'S</string>
    <string name="how_to_use">How to Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy">Privacy</string>
    <string name="social_media">Social Media</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter (X)</string>
    <string name="instagram">Instagram</string>
    <string name="you_tube">YouTube</string>
    <string name="linkedin">LinkedIn</string>
    <string name="update_profile">Update Profile</string>
    <string name="scan">Scan</string>
    <string name="skip">Skip</string>
    <string name="allow">Allow</string>

    <string name="permission_required">Permission Required</string>
    <string name="location_permission_message">Please allow location permission to verify your address</string>
    <string name="camera_permission_message">Please allow camera permission to take pictures.</string>
    <string name="bluetooth_permission_msg">Please allow Bluetooth permission to access Machine</string>

    <string name="get_notified">Get Notified!</string>
    <string name="notified_details">Stay in Touch…\nWhat\'s going in App!</string>

    <string name="permission_contact_message">Permission Required to get contact Number.</string>
    <string name="permission_nearby_message">Permission Required to connect printer.</string>

    <string name="ask_later">Ask later</string>
    <string name="location_msg_if_dont_allow">You Can Allow Permission in Setting</string>
    <string name="permission_denied_msg">Permission Denied!</string>
    <string name="permission_skipped">Permission Skipped</string>
    <string name="mandatory_permission">Mandatory Permission</string>
    <string name="for_security_reason_you_are_unable_to_use_the_app">For security reasons, you are not allowed to use the app, please try again after granting location permission.</string>
    <string name="allow_permission">Allow Permission</string>
    <string name="close_app">Close Application</string>
    <string name="confirm_your_details">Confirm Your Details</string>
    <string name="place_your_order">Place your order</string>
    <string name="paying_with">Paying With</string>
    <string name="cash_on_delivery">Cash On Delivery</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change_address">Change Address</string>
    <string name="arrival_date">Arrival Date</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order_history">Order History</string>
    <string name="history">History</string>
    <string name="reorder">Reorder</string>
    <string name="ordered_on_">Ordered on : %1$s</string>
    <string name="status_">Status: %1$s</string>
    <string name="activate_card">Activate Card</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="activate">Activate Card</string>
    <string name="edit">Edit</string>
    <string name="email_id">Email ID</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="activated_card">Activated Card</string>
    <string name="frequentlty_asked_question">Frequentlty Asked Question</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="submit">Submit</string>
    <string name="edit_msg">#NOTE: You can only edit linked Mobile Number and Email ID.</string>
    <string name="start_shipping">Start Shipping</string>
    <string name="buy_now">Buy Now</string>
    <string name="log_out">Log Out</string>
    <string name="something_went_wrong">Something went wrong</string>

</resources>