<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cart.CartFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        style="@style/myTextStyle"
        android:text="@string/my_cart"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="@dimen/extra_side_margin"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        app:layout_constraintStart_toEndOf="@id/cartCount"
        app:layout_constraintTop_toTopOf="parent"
        />

    <ImageView
        android:id="@+id/cartCount"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_cart"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="@dimen/side_margin"
        app:tint="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emptyLayout"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/emptyImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/empty_cart"
            android:adjustViewBounds="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myTextStyle"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/sorry"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myTextStyle"
            android:text="@string/no_items_in_cart"
            android:layout_gravity="center"
            />

    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/shop_now"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_margin="@dimen/side_margin"
        />
</androidx.constraintlayout.widget.ConstraintLayout>