<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="16dp">
    <TextView
        style="@style/myTextStyle"
        android:text="@string/choose_where_to_find_the_image"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:id="@+id/title"
        />

    <LinearLayout
        android:id="@+id/lytCameraPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/lytGalleryPick"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:srcCompat="@drawable/camera"
            android:id="@+id/firstOptionIcon"  />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:id="@+id/firstOptionText"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/camera"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lytGalleryPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:gravity="center"
        android:paddingHorizontal="30dp"
        android:paddingVertical="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toEndOf="@id/lytCameraPick"

        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/secondOptionIcon"
            app:srcCompat="@drawable/gallery"
            app:tint="@color/colorPrimary" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:id="@+id/secondOptionText"
            android:text="@string/gallery"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <TextView
        style="@style/myTextStyle"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytGalleryPick"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/cancel"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>