<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/actionBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:translationZ="5dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardElevation="5dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                style="@style/myTextStyle"
                android:layout_marginStart="30dp"
                android:text="@string/crop_image"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/horizontalFlip"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="@dimen/side_margin"
                android:contentDescription="@string/crop_image_menu_flip_horizontally"
                android:src="@drawable/crop_image_menu_flip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/verticalFlip"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="@dimen/side_margin"
                android:contentDescription="@string/crop_image_menu_flip_horizontally"
                android:rotation="90"
                android:src="@drawable/crop_image_menu_flip"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/horizontalFlip"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/rotate"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginHorizontal="@dimen/side_margin"
                android:contentDescription="@string/crop_image_menu_flip_horizontally"
                android:src="@drawable/crop_image_menu_rotate_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/verticalFlip"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <com.call2owner.custom.cropImage.CropImageView
        android:id="@+id/cropImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:layout_marginBottom="50dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnLayout"
        android:background="@color/white"
        style="@style/myTextStyle"
        android:textColor="@color/white"
        android:id="@+id/locationInfo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/btnLayout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/selectImage"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/select_image"
            android:textAllCaps="false"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


